Fix too small line height in tool-tips

--- a/src/main/front-end/app/less/document-fingerprint.less
+++ b/src/main/front-end/app/less/document-fingerprint.less
@@ -59,8 +59,7 @@
   }
 }
 
-.document-fingerprint-tool-tip{
-  line-height: 1;
+.document-fingerprint-tool-tip {
   font-weight: bold;
   padding: 12px;
   background: rgba(0, 0, 0, 0.8);
